--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -1,8 +1,22 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+:target {
+  scroll-margin-top: 5rem;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +24,527 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  height: 75px;
+  color: darkblue;
+  box-shadow: var(--shd-scrl,0 0 5px rgba(0,0,0,.5));
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+}
+
+.logo {
+  line-height: 75px;
+  float: left;
+  font-size: 24px;
+  margin-left: 40px;
+}
+
+header .nav-links {
+  float: right;
+  list-style: none;
+  font-size: 14px;
+}
+
+header .nav-links {
+  line-height: 75px;
+  padding-right: 25px;
+}
+
+header .nav-links-laptop li {
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity 500ms ease;
+  transition: color 500ms ease;
+}
+
+.select-lang-button {
+  display: inline;
+  margin-bottom: -5px;
+  cursor: pointer;
+}
+
+.lang-select {
+  background-color: white;
+  float: left;
+  position: absolute;
+  right: 0px;
+  top: 75px;
+  animation: fadeIn 0.2s ease-in-out;
+  box-shadow: var(--shd-scrl,0 3px 4px rgba(0,0,0,.5));
+}
+
+.lang-option {
+  height: fit-content;
+  width: 125px;
+  padding: 5px;
+  float: left;
+  clear: both;
+  cursor: pointer;
+  transition: background-color 500ms ease;
+}
+
+.lang-option img {
+  float: left;
+}
+
+.lang-label {
+  float: left;
+  line-height: 18px;
+  margin-left: 5px;
+}
+
+.lang-option:hover {
+  background-color: #f2f2f2;
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+header .nav-links li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+header .nav-links li:hover {
+  color: rgb(53, 53, 209);
+}
+
+.select-lang {
+  color: inherit;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.mobile-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 20px;
+}
+
+.wrapper {
+  padding-top: 75px;
+}
+
+.presentation {
+  background: url('./images/home-image.jpg') no-repeat;
+  width: 100%;
+  height: calc(100vh - 75px);
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: lightslategray; /*dimgrey, darkgray, lightslategray, slategray*/
+  position: relative;
+}
+
+.presentation-text {
+  position: absolute;
+  top: 20%;
+  left: 50px;
+  width: 400px;
+  font-size: 36px;
+  font-weight: 400;
+  color: white;
+}
+
+.services-section {
+  width: 90%;
+  background-color: white;
+  color: darkblue;
+  padding: 60px 5%;
+}
+
+.services-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.services-list {
+  width: 1000px;
+  margin: 40px auto;
+}
+
+.service-block {
+  padding-top: 10px;
+  width: calc(33.3% - 10px);
+  height: 200px;
+  float: left;
+  text-align: center;
+}
+
+.service-block:not(:first-child) {
+  margin-left: 10px;
+}
+
+.service-icon {
+  font-size: 36px;
+}
+
+.service-label {
+  font-size: 18px;
+  color: #333;
+}
+
+.service-description {
+  color: #333;
+  height: 100px;
+  font-size: 15px;
+  padding: 10px;
+}
+
+.horizontal-line {
+  border: none;
+  background-color: silver;
+  height: 1px;
+  width: 260px;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.about-section {
+  height: fit-content;
+  width: 80%;
+  padding: 50px 10% 80px;
+  background-color: darkblue;
+}
+
+.about-title {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 35px;
+}
+
+.about-description {
+  color: white;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contacts-section {
+  width: calc(100% - 200px);
+  padding: 50px 100px;
+}
+
+.contacts-title {
+  color: darkblue;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 35px;
+}
+
+.contacts-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.contacts-block {
+  width: calc(100% - 400px);
+}
+
+.contact-us {
+  color: darkblue;
+  text-align: center;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.address-section {
+  color: darkblue;
+  width: 400px;
+}
+
+.address,
+.telephone-number {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  width: 180px;
+  font-size: 14px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-field {
+  outline: none;
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid darkblue;
+  border-radius: 2px;
+}
+
+.input-field:hover {
+  border-color: #333;
+}
+
+.error-text {
+  height: 20px;
+  width: 100%;
+  font-size: 14px;
+  font-family: Arial;
+  padding-left: 3px;
+  color: rgb(219, 27, 27);
+}
+
+.error-input {
+  border-color: rgb(219, 27, 27);
+}
+
+.send-message-button {
+  width: 200px;
+  padding: 10px;
+  background-color: darkblue;
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 15px;
+  border-radius: 2px;
+  transition: background-color 500ms ease;
+  cursor: pointer;
+}
+
+.message-field {
+  font-family: Arial;
+  height: 200px;
+  resize: none;
+}
+
+.send-message-button:hover {
+  background-color: rgb(53, 53, 209);
+}
+
+.fade-text {
+  animation: fadein 2s;
+  -moz-animation: fadein 2s; /* Firefox */
+  -webkit-animation: fadein 2s; /* Safari and Chrome */
+  -o-animation: fadein 2s; /* Opera */
+}
+
+@keyframes fadein {
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+
+@-moz-keyframes fadein { /* Firefox */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+
+@-webkit-keyframes fadein { /* Safari and Chrome */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
+
+@-o-keyframes fadein { /* Opera */
+  from {
+      opacity:0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+section {
+  opacity: 0;
+  transform: translate(0, 50%);
+  visibility: hidden;
+  transition: opacity 300ms ease-out, transform 300ms ease-out;
+  will-change: opacity, visibility;
+}
+
+.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+@media(min-width: 1070px) {
+  .address-title {
+    display: block;
+  }
+
+  .services-section {
+    height: 300px;
+  }
+  
+  .services-list {
+    height: 200px;
+  }
+}
+
+@media(max-width: 1070px) {
+  .services-section {
+    height: 650px;
+  }
+  
+  .services-list {
+    display: flex;
+    flex-direction: column;
+    width: inherit;
+    height: 600px;
+  }
+  
+  .service-block {
+    margin: auto !important;
+    width: inherit;
+    max-width: 300px;
+  }
+
+  .contacts-section {
+    width: 80%;
+    padding: 50px 10%;
+  }
+
+  .contacts-title {
+    margin-bottom: 0px;
+  }
+
+  .contacts-content {
+    flex-direction: column-reverse;
+    height: fit-content;
+  }
+
+  .address-title {
+    display: none;
+  }
+
+  .address, 
+  .telephone-number {
+    width: inherit;
+  }
+
+  .address-section {
+    margin: auto;
+    width: inherit;
+    text-align: center;
+  }
+
+  .contacts-block {
+    margin: 20px auto 0px;
+    width: 80%;
+  }
+
+  .send-message-button {
+    margin: auto;
+  }
+}
+
+@media(min-width: 700px) {
+  .mobile-menu-button {
+    display: none;
+  }
+}
+
+@media(max-width: 700px) {
+  .nav-links-laptop {
+    display: none;
+  }
+
+  .lang-select {
+    left: 0px;
+    top: 230px;
+    border-top: 1px solid #f2f2f2;
+  }
+
+  .lang-option {
+    width: calc(100% - 10px);
+  }
+
+  .nav-links-mobile {
+    margin: 0;
+    position: absolute;
+    display: block;
+    list-style: none;
+    box-shadow: rgba(50, 50, 93, 0.23) -14px 14px 10px -10px;
+    left: 0;
+    top: 10%;
+    transition: all 0.5s ease-in-out;
+    width: 100%;
+    background-color: white;
+    animation: fadeIn 0.2s ease-in-out;
+  }
+
+  header .nav-links-mobile {
+    top: 74px;
+    line-height: 24px;
+    padding-bottom: 10px;
+    border-top: 1px solid silver;
+  }
+  
+  header .nav-links-mobile li {
+    padding: 10px 20px;
+  }
+
+  .mobile-menu-button {
+    color: darkblue;
+    display: block;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+  }
+
+  .presentation::after  {
+    width: fit-content;
+    max-width: 400px;
+    font-size: 28px;
+    left: 15px;
+  }
+
+  .contacts-block {
+    width: 100%;
+  }
+}
+
+@media(max-width: 500px) {
+  .presentation-text {
+    left: 18px;
+    width: fit-content;
+    font-size: 30px;
+  }
+
+  .message-field {
+    height: 250px;
+  }
 }
