--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -385,6 +385,12 @@ header .nav-links li:hover {
   }
 }
 
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+} 
+
+
 section {
   opacity: 0;
   transform: translate(0, 50%);
@@ -397,6 +403,20 @@ section {
   opacity: 1;
   transform: none;
   visibility: visible;
+}
+
+.fade-right {
+  animation: fadeInRight 1s ease-in-out;
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media(min-width: 1070px) {
