--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -393,30 +393,27 @@ header .nav-links li:hover {
 
 section {
   opacity: 0;
-  transform: translate(0, 50%);
   visibility: hidden;
-  transition: opacity 300ms ease-out, transform 300ms ease-out;
   will-change: opacity, visibility;
+  transition: opacity 300ms ease-out, transform 300ms ease-out;
+}
+
+.fade-right {
+  transform: translateX(50%);
+}
+
+.fade-left {
+  transform: translateX(-50%);
+}
+
+.fade-bottom {
+  transform: translate(0, 50%);
 }
 
 .is-visible {
   opacity: 1;
   transform: none;
   visibility: visible;
-}
-
-.fade-right {
-  animation: fadeInRight 1s ease-in-out;
-}
-
-@keyframes fadeInRight {
-  from {
-    opacity: 0;
-    transform: translateX(300px);
-  }
-  to {
-    opacity: 1;
-  }
 }
 
 @media(min-width: 1070px) {
