--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -172,14 +172,21 @@ header .nav-links li:hover {
 }
 
 .services-list {
-  width: 1000px;
+  display: flex;
+  flex-direction: column;
+  width: 750px;
   margin: 40px auto;
+}
+
+.service-header {
+  display: flex;
+  justify-content: center;
 }
 
 .service-block {
   padding-top: 10px;
-  width: calc(33.3% - 10px);
-  height: 200px;
+  padding-bottom: 25px;
+  width: 100%;
   float: left;
   text-align: center;
 }
@@ -189,19 +196,20 @@ header .nav-links li:hover {
 }
 
 .service-icon {
-  font-size: 36px;
-}
-
-.service-label {
-  font-size: 18px;
-  color: #333;
+  font-size: 24px;
+  margin-right: 5px;
 }
 
 .service-description {
-  color: #333;
-  height: 100px;
-  font-size: 15px;
+  border-radius: 10px;
+  border: 2px dashed silver;
   padding: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+.service-description p {
+  text-indent: 20px;
 }
 
 .horizontal-line {
