--- a/webclient/src/index.css
+++ b/webclient/src/index.css
@@ -221,15 +221,24 @@ header .nav-links li:hover {
   margin-top: 10px;
 }
 
-.about-section {
+.about-section,
+.about-section-ceo {
   height: fit-content;
   width: 80%;
   padding: 50px 10% 80px;
+}
+
+.about-section {
+  color: white;
   background-color: darkblue;
 }
 
+.about-section-ceo {
+  background-color: white;
+  color: darkblue;
+}
+
 .about-title {
-  color: white;
   text-align: center;
   text-transform: uppercase;
   font-size: 22px;
@@ -238,7 +247,6 @@ header .nav-links li:hover {
 }
 
 .about-description {
-  color: white;
   text-align: center;
   margin-top: 20px;
 }
