--- a/src/index.css
+++ b/src/index.css
@@ -328,7 +328,7 @@ header .nav-links li:hover {
 }
 
 .error-text {
-  text-align: center;
+  text-align: start;
   height: 20px;
   width: 100%;
   font-size: 14px;
