--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@ header .nav-links-laptop li {
   float: left;
 }
 
+.project-link {
+  font-weight: 600;
+}
+
 .lang-label {
   float: left;
   line-height: 18px;
@@ -112,6 +116,22 @@ header .nav-links li a,
 .social-link {
   text-decoration: none;
   color: inherit;
+}
+
+.project-title {
+  color: darkblue;
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+.project-content {
+  min-height: 220px;
+}
+
+.project-description {
+  text-align: start;
+  text-indent: 10px;
+  padding: 0px 5px;
 }
 
 header .nav-links li:hover {
@@ -173,10 +193,20 @@ header .nav-links li:hover {
 }
 
 .services-list {
+  margin: 40px auto;
+}
+
+.projects-list {
+  margin: 10px auto;
+  padding-bottom: 50px;
+}
+
+.services-list,
+.projects-list {
   display: flex;
   flex-direction: column;
+  height: fit-content !important;
   width: 750px;
-  margin: 40px auto;
 }
 
 .service-header {
@@ -192,16 +222,24 @@ header .nav-links li:hover {
   text-align: center;
 }
 
-.service-block:not(:first-child) {
-  margin-left: 10px;
-}
-
 .service-icon {
   font-size: 24px;
   margin-right: 5px;
 }
 
-.service-description {
+.projects-title {
+  margin-top: 25px;
+  font-size: 20px;
+  color: darkblue;
+}
+
+.project-content {
+  display: flex;
+  color: darkblue;
+}
+
+.service-description,
+.project-content {
   border-radius: 10px;
   border: 2px dashed silver;
   padding: 10px;
@@ -299,7 +337,7 @@ header .nav-links li:hover {
 }
 
 .social-link-icon:hover {
-  color: mediumblue;
+  color: #2952a3;/*mediumblue;*/
 }
 
 .address,
@@ -362,6 +400,13 @@ header .nav-links li:hover {
 
 .send-message-button:hover {
   background-color: rgb(53, 53, 209);
+}
+
+.video-file {
+  height: fit-content;
+  width: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .2), 0px 2px 2px 0px rgba(0, 0, 0, .14), 0px 1px 5px 0px rgba(0, 0, 0, .12);
 }
 
 .fade-text {
@@ -455,30 +500,41 @@ section {
   }
 
   .services-section {
-    height: 300px;
+    height: fit-content;
   }
   
-  .services-list {
+  .services-list,
+  .projects-list {
     height: 200px;
   }
 }
 
 @media(max-width: 1070px) {
   .services-section {
-    height: 650px;
+    
   }
   
-  .services-list {
+  .services-list,
+  .projects-list {
     display: flex;
     flex-direction: column;
     width: inherit;
     height: 600px;
   }
   
-  .service-block {
+  .service-block,
+  .project-block {
     margin: auto !important;
     width: inherit;
     max-width: 300px;
+  }
+
+  .video-file {
+    width: 280px;
+  }
+
+  .project-content {
+    flex-direction: column;
   }
 
   .contacts-section {
@@ -567,7 +623,7 @@ section {
   }
 
   .mobile-menu-button {
-    color: darkblue;
+    color: darkblue; /*#2952a3*/
     display: block;
     position: absolute;
     right: 25px;
@@ -606,11 +662,13 @@ section {
     margin: auto;
   }
 
-  .service-block {
+  .service-block,
+  .project-block {
     padding-bottom: 15px;
   }
 
-  .services-list {
+  .services-list,
+  .projects-list {
     margin-top: 20px;
     height: fit-content;
   }
