--- a/src/index.css
+++ b/src/index.css
@@ -405,6 +405,7 @@ header .nav-links li:hover {
 .video-file {
   height: fit-content;
   width: 400px;
+  height: 220px;
   border-radius: 10px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .2), 0px 2px 2px 0px rgba(0, 0, 0, .14), 0px 1px 5px 0px rgba(0, 0, 0, .12);
 }
