--- a/src/index.css
+++ b/src/index.css
@@ -199,6 +199,11 @@ header .nav-links li:hover {
 .projects-list {
   margin: 10px auto;
   padding-bottom: 50px;
+  width: 850px;
+}
+
+.services-list {
+  width: 750px;
 }
 
 .services-list,
@@ -206,7 +211,6 @@ header .nav-links li:hover {
   display: flex;
   flex-direction: column;
   height: fit-content !important;
-  width: 750px;
 }
 
 .service-header {
@@ -404,8 +408,8 @@ header .nav-links li:hover {
 
 .video-file {
   height: fit-content;
-  width: 400px;
-  height: 220px;
+  width: 500px;
+  height: 280px;
   border-radius: 10px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, .2), 0px 2px 2px 0px rgba(0, 0, 0, .14), 0px 1px 5px 0px rgba(0, 0, 0, .12);
 }
