--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,77 @@
   margin: 0;
 }
 
+:root {
+  --main-color: darkblue; /*#2952a3*/
+  --hover-color: rgb(53, 53, 209);
+  --error-color: rgb(219, 27, 27);
+}
+
 html,
 body {
   width: 100%;
   height: 100%;
   scroll-behavior: smooth;
+}
+
+.four-of-four-footer-block {
+  margin-top: 10px;
+}
+
+.page-four-of-four-content {
+  display: flex;
+  height: inherit;
+  width: inherit;
+  justify-content: center;
+  background-color: #fcfcfc;
+}
+
+.page-four-of-four-content-section {
+  width: 350px;
+  padding: 50px 75px;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: white;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.75);
+  margin-top: 150px;
+  border-radius: 5px;
+}
+
+.send-message-button,
+.back-button {
+  padding: 10px;
+  background-color: var(--main-color);
+  border: none;
+  outline: none;
+  color: white;
+  font-size: 15px;
+  border-radius: 2px;
+  transition: background-color 500ms ease;
+  cursor: pointer;
+}
+
+.back-button {
+  width: 100px;
+}
+
+.send-message-button:hover,
+.back-button:hover {
+  background-color: var(--hover-color);
+}
+
+.label {
+  line-height: 50px;
+  text-align: center;
+  font-size: 60px;
+  color: var(--main-color);
+  font-weight: 900;
+  margin-bottom: 15px;
+}
+
+.text {
+  text-align: center;
+  font-size: 16px;
+  color: var(--main-color);
 }
 
 :target {
@@ -28,7 +94,7 @@ code {
 
 header {
   height: 75px;
-  color: darkblue;
+  color: var(--main-color);
   box-shadow: var(--shd-scrl,0 0 5px rgba(0,0,0,.5));
   z-index: 100;
   position: fixed;
@@ -119,7 +185,7 @@ header .nav-links li a,
 }
 
 .project-title {
-  color: darkblue;
+  color: var(--main-color);
   margin-top: 10px;
   font-size: 18px;
 }
@@ -134,7 +200,7 @@ header .nav-links li a,
 }
 
 header .nav-links li:hover {
-  color: rgb(53, 53, 209);
+  color: var(--hover-color);
 }
 
 .select-lang {
@@ -180,7 +246,7 @@ header .nav-links li:hover {
 .services-section {
   width: 90%;
   background-color: white;
-  color: darkblue;
+  color: var(--main-color);
   padding: 60px 5%;
 }
 
@@ -233,12 +299,12 @@ header .nav-links li:hover {
 .projects-title {
   margin-top: 25px;
   font-size: 20px;
-  color: darkblue;
+  color: var(--main-color);
 }
 
 .project-content {
   display: flex;
-  color: darkblue;
+  color: var(--main-color);
 }
 
 .service-description,
@@ -272,12 +338,12 @@ header .nav-links li:hover {
 
 .about-section {
   color: white;
-  background-color: darkblue;
+  background-color: var(--main-color);
 }
 
 .about-section-ceo {
   background-color: white;
-  color: darkblue;
+  color: var(--main-color);
 }
 
 .about-title {
@@ -299,7 +365,7 @@ header .nav-links li:hover {
 }
 
 .contacts-title {
-  color: darkblue;
+  color: var(--main-color);
   text-align: center;
   text-transform: uppercase;
   font-size: 22px;
@@ -317,14 +383,14 @@ header .nav-links li:hover {
 }
 
 .contact-us {
-  color: darkblue;
+  color: var(--main-color);
   text-align: center;
   margin-top: 30px;
   font-size: 20px;
 }
 
 .address-section {
-  color: darkblue;
+  color: var(--main-color);
   width: 400px;
   text-align: start;
 }
@@ -340,7 +406,7 @@ header .nav-links li:hover {
 }
 
 .social-link-icon:hover {
-  color: #2952a3;/*mediumblue;*/
+  color: var(--hover-color);/*mediumblue;*/
 }
 
 .address,
@@ -360,7 +426,7 @@ header .nav-links li:hover {
   outline: none;
   padding: 10px;
   font-size: 16px;
-  border: 2px solid darkblue;
+  border: 2px solid var(--main-color);
   border-radius: 2px;
 }
 
@@ -375,24 +441,15 @@ header .nav-links li:hover {
   font-size: 14px;
   font-family: Arial;
   padding-left: 3px;
-  color: rgb(219, 27, 27);
+  color: var(--error-color);
 }
 
 .error-input {
-  border-color: rgb(219, 27, 27);
+  border-color: var(--error-color);
 }
 
 .send-message-button {
   width: 200px;
-  padding: 10px;
-  background-color: darkblue;
-  border: none;
-  outline: none;
-  color: white;
-  font-size: 15px;
-  border-radius: 2px;
-  transition: background-color 500ms ease;
-  cursor: pointer;
 }
 
 .message-field {
@@ -402,7 +459,7 @@ header .nav-links li:hover {
 }
 
 .send-message-button:hover {
-  background-color: rgb(53, 53, 209);
+  background-color: var(--hover-color);
 }
 
 .video-file {
@@ -591,6 +648,11 @@ section {
 }
 
 @media(max-width: 700px) {
+  .page-four-of-four-content-section {
+    width: calc(90% - 60px);
+    padding: 30px;
+  }
+
   .nav-links-laptop {
     display: none;
   }
@@ -631,7 +693,7 @@ section {
   }
 
   .mobile-menu-button {
-    color: darkblue; /*#2952a3*/
+    color: var(--main-color);
     display: block;
     position: absolute;
     right: 25px;
